--- a/guesslanguage/templates/guesslanguage.html
+++ b/guesslanguage/templates/guesslanguage.html
@@ -5,34 +5,31 @@
         $("form").submit(function(event)
         {
             event.preventDefault();
-            var text= $("textarea[name=input_text]", 'form').val();
+            var text= $("textarea[name=input_text]", 'form').val(),
+                jsonRequest = {
+                    method:  "guesslanguage.guessLanguage",
+                    params: [text],
+                    id: ""
+                },
+                id_result = $('#result'),
+                id_error = $('#errormessage'),
+                id_progress = $('#progress');
 
-            var jsonRequest = {
-                "method" :  "guesslanguage.guessLanguage",
-                "params" : [text],
-                "id" : ""
-            };
-            id_result = $('#result');
-            id_error = $('#errormessage');
-            id_progress = $('#progress');
             $.ajax({
                 type: "POST",
                 contentType: "application/json; charset=utf-8",
                 url: "JSONRPC",
                 data: JSON.stringify(jsonRequest),
                 dataType: "json",
-                beforeSend:function(){
+                beforeSend: function(){
                     id_result.hide();
                     id_error.hide();
                     id_progress.html("Guessing. Please Wait...").show();
                 },
                 success: function(msg) {
                     id_progress.hide();
-                    var result = msg.result;
-                    console.log(result);
-                    id_result.html("<p>"+result+"</p>").show();
+                    id_result.html(msg.result).show();
                 },
-
                 error: function(msg) {
                     id_progress.hide();
                     id_error.html("Something went wrong. Please try again!").show();
@@ -53,7 +50,7 @@ You can give the text in any language and even with mixed language</p>
 
 <form class="form-horizontal" action="" method="post">
     <div class="form-group">
-        <textarea name='input_text' id='id1' rows=10 class="form-control"></textarea>
+        <textarea name='input_text' id='id1' rows=10 class="form-control ime"></textarea>
     </div>
     <div class="form-group">
         <button class="btn btn-default" type="submit" id="Convert">Guess</button>
