--- a/libindic/guesslanguage/templates/guesslanguage.html
+++ b/libindic/guesslanguage/templates/guesslanguage.html
@@ -9,7 +9,8 @@
                 jsonRequest = {
                     method:  "guesslanguage.guessLanguage",
                     params: [text],
-                    id: ""
+                    id: "jsonrpc",
+                    jsonrpc: "2"
                 },
                 id_result = $('#result'),
                 id_error = $('#errormessage'),
@@ -18,7 +19,7 @@
             $.ajax({
                 type: "POST",
                 contentType: "application/json; charset=utf-8",
-                url: "JSONRPC",
+                url: "/api/JSONRPC",
                 data: JSON.stringify(jsonRequest),
                 dataType: "json",
                 beforeSend: function(){
